[gd_scene load_steps=32 format=3 uid="uid://cytv8wbjpo8ms"]

[ext_resource type="Script" path="res://apps/painter/painter.gd" id="1_r1smx"]
[ext_resource type="Script" path="res://apps/painter/nodes/undo.gd" id="2_fbwuv"]
[ext_resource type="PackedScene" uid="uid://bn5p31m1beflu" path="res://apps/painter/scenes/canvas.tscn" id="3_bo72m"]
[ext_resource type="Texture2D" uid="uid://dxpyxfysoqmyu" path="res://apps/painter/assets/icons/rotate_left.svg" id="5_5sj71"]
[ext_resource type="PackedScene" uid="uid://c7532vujfwgmn" path="res://apps/painter/scenes/view_tools.tscn" id="5_xnosc"]
[ext_resource type="Script" path="res://apps/painter/nodes/shape_button.gd" id="8_hoo73"]
[ext_resource type="Script" path="res://interface/components/panel_button/panel_button.gd" id="10_hbpj8"]
[ext_resource type="Texture2D" uid="uid://xtyu065fl2xv" path="res://apps/painter/assets/shapes/square.svg" id="11_6hvxm"]
[ext_resource type="Texture2D" uid="uid://26p63shqhm1k" path="res://apps/painter/assets/icons/rotate_right.svg" id="11_11syx"]
[ext_resource type="PackedScene" path="res://apps/painter/scenes/palette.tscn" id="12_4owpo"]
[ext_resource type="Texture2D" uid="uid://bhvq4marly1o0" path="res://apps/painter/assets/icons/rectangle.svg" id="12_geruk"]
[ext_resource type="Texture2D" uid="uid://mexdj1uqwyjs" path="res://apps/painter/assets/icons/gallery.svg" id="13_f0mbl"]
[ext_resource type="Texture2D" uid="uid://b24vngv1jm71o" path="res://apps/painter/assets/icons/line.svg" id="13_monbh"]
[ext_resource type="Texture2D" uid="uid://ch7l34kkmaatb" path="res://apps/painter/assets/icons/eraser.svg" id="14_umeww"]
[ext_resource type="Texture2D" uid="uid://o6p0w2gruix" path="res://apps/painter/assets/icons/pencil.svg" id="15_bphgi"]
[ext_resource type="Theme" uid="uid://wbvix152d8b5" path="res://apps/painter/assets/themes/draw_tools.tres" id="15_icrpu"]
[ext_resource type="Script" path="res://interface/components/circle_menu/circle_menu.gd" id="15_rflyk"]
[ext_resource type="PackedScene" uid="uid://b7ovq30s6xpbu" path="res://apps/painter/scenes/save_menu.tscn" id="16_0ik5s"]
[ext_resource type="Texture2D" uid="uid://dwlu8jm1xyn6t" path="res://apps/painter/assets/icons/undo.svg" id="16_bta2x"]
[ext_resource type="Texture2D" uid="uid://b2lpdvuywdedv" path="res://apps/painter/assets/icons/check.svg" id="16_m0h7j"]
[ext_resource type="Texture2D" uid="uid://bn61fbcpokvek" path="res://apps/painter/assets/icons/back.svg" id="16_sdttm"]
[ext_resource type="Texture2D" uid="uid://dp0xkjoprvqm7" path="res://apps/painter/assets/icons/redo.svg" id="17_nvjsf"]
[ext_resource type="Texture2D" uid="uid://4vh1caqutpo" path="res://apps/painter/assets/icons/increase_size.svg" id="19_crq7g"]
[ext_resource type="Texture2D" uid="uid://by73s6jeshln5" path="res://apps/painter/assets/icons/decrease_size.svg" id="20_ycmut"]
[ext_resource type="Texture2D" uid="uid://bapda8bny76r5" path="res://apps/painter/assets/icons/zoom_in.svg" id="24_4mq7p"]
[ext_resource type="PackedScene" uid="uid://bl7rg3ye1ye3q" path="res://apps/painter/scenes/gallery.tscn" id="25_1hssg"]
[ext_resource type="Texture2D" uid="uid://6t2bh8qv4gjy" path="res://apps/painter/assets/icons/zoom_out.svg" id="25_4dkvo"]
[ext_resource type="Texture2D" uid="uid://dnyt7rc2qfo58" path="res://temp/ios_guide-01.svg" id="27_frdcy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hkiu"]
bg_color = Color(0.188235, 0.262745, 0.368627, 0.784314)
border_width_top = 3
border_color = Color(0.2, 0.254902, 0.333333, 0.490196)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000
corner_detail = 20

[sub_resource type="Gradient" id="Gradient_x1euq"]
offsets = PackedFloat32Array(0.0521092, 0.557078, 0.981735)
colors = PackedColorArray(0.117647, 0.160784, 0.231373, 0.392157, 0.117647, 0.160784, 0.231373, 0.118463, 0.117647, 0.160784, 0.231373, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fvk5r"]
gradient = SubResource("Gradient_x1euq")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="Painter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("15_icrpu")
script = ExtResource("1_r1smx")

[node name="Undo" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_fbwuv")

[node name="Canvas" parent="." instance=ExtResource("3_bo72m")]
unique_name_in_owner = true

[node name="CanvasTools" type="MarginContainer" parent="."]
clip_contents = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource("15_icrpu")
theme_override_constants/margin_top = 110
theme_override_constants/margin_bottom = 130

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasTools"]
offset_left = 24.0
offset_top = 110.0
offset_right = 804.0
offset_bottom = 1662.0
size_flags_vertical = 3
mouse_filter = 2

[node name="MetaToolsContainer" type="HBoxContainer" parent="CanvasTools/VBoxContainer"]
offset_right = 780.0
offset_bottom = 94.0
mouse_filter = 2
theme_override_constants/separation = 24

[node name="ViewToolsWindow" parent="CanvasTools/VBoxContainer/MetaToolsContainer" instance=ExtResource("5_xnosc")]
offset_bottom = 94.0
size_flags_horizontal = 0

[node name="UndoButtons" type="PanelContainer" parent="CanvasTools/VBoxContainer/MetaToolsContainer"]
offset_left = 104.0
offset_right = 292.0
offset_bottom = 94.0
size_flags_horizontal = 8
size_flags_vertical = 4
theme_type_variation = &"FloatingPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasTools/VBoxContainer/MetaToolsContainer/UndoButtons"]
offset_left = 12.0
offset_top = 12.0
offset_right = 176.0
offset_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="UndoButton" type="Button" parent="CanvasTools/VBoxContainer/MetaToolsContainer/UndoButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
offset_right = 70.0
offset_bottom = 70.0
size_flags_vertical = 0
theme_type_variation = &"FloatingPanelButton"
icon = ExtResource("16_bta2x")
icon_alignment = 1
expand_icon = true

[node name="RedoButton" type="Button" parent="CanvasTools/VBoxContainer/MetaToolsContainer/UndoButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
offset_left = 94.0
offset_right = 164.0
offset_bottom = 70.0
size_flags_vertical = 0
theme_type_variation = &"FloatingPanelButton"
icon = ExtResource("17_nvjsf")
icon_alignment = 1
expand_icon = true

[node name="Spacer" type="MarginContainer" parent="CanvasTools/VBoxContainer/MetaToolsContainer"]
offset_left = 316.0
offset_right = 568.0
offset_bottom = 94.0
size_flags_horizontal = 3
mouse_filter = 2

[node name="GalleryButtons" type="PanelContainer" parent="CanvasTools/VBoxContainer/MetaToolsContainer"]
offset_left = 592.0
offset_right = 780.0
offset_bottom = 94.0
size_flags_horizontal = 8
size_flags_vertical = 4
theme_type_variation = &"FloatingPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasTools/VBoxContainer/MetaToolsContainer/GalleryButtons"]
offset_left = 12.0
offset_top = 12.0
offset_right = 176.0
offset_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="GalleryButton" type="Button" parent="CanvasTools/VBoxContainer/MetaToolsContainer/GalleryButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
offset_right = 70.0
offset_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"FloatingPanelButton"
icon = ExtResource("13_f0mbl")
icon_alignment = 1
expand_icon = true

[node name="SaveButton" parent="CanvasTools/VBoxContainer/MetaToolsContainer/GalleryButtons/HBoxContainer" instance=ExtResource("16_0ik5s")]
custom_minimum_size = Vector2(70, 60)
anchor_left = 0.0
anchor_right = 0.0
offset_left = 94.0
offset_top = 5.0
offset_right = 164.0
offset_bottom = 65.0
size_flags_horizontal = 8

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasTools/VBoxContainer"]
offset_top = 118.0
offset_right = 780.0
offset_bottom = 258.0
mouse_filter = 2

[node name="PanelButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
offset_top = 20.0
offset_right = 100.0
offset_bottom = 120.0
size_flags_horizontal = 0
size_flags_vertical = 4
toggle_mode = true
keep_pressed_outside = true
icon = ExtResource("11_6hvxm")
expand_icon = true
script = ExtResource("10_hbpj8")
container_path = NodePath("MarginContainer")

[node name="MarginContainer" type="MarginContainer" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton"]
visible = false
custom_minimum_size = Vector2(645, 0)
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 545.0
offset_bottom = 179.0
pivot_offset = Vector2(50, 50)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer"]
offset_left = 24.0
offset_top = 24.0
offset_right = 644.0
offset_bottom = 279.0

[node name="ShapesCloseButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer"]
offset_right = 620.0
offset_bottom = 61.0
theme_override_constants/h_separation = 30
theme_override_font_sizes/font_size = 26
text = "S  H  A  P  E  S"
icon = ExtResource("16_sdttm")
flat = true
alignment = 0
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer"]
offset_top = 85.0
offset_right = 620.0
offset_bottom = 255.0
theme_override_constants/separation = 10

[node name="LeftDrawTools" type="VBoxContainer" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer"]
offset_right = 90.0
offset_bottom = 170.0
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="RotateLeftButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/LeftDrawTools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 80)
offset_right = 90.0
offset_bottom = 80.0
text = "
"
icon = ExtResource("5_5sj71")
icon_alignment = 1
expand_icon = true

[node name="DecreaseSizeButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/LeftDrawTools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
offset_top = 90.0
offset_right = 90.0
offset_bottom = 170.0
icon = ExtResource("20_ycmut")
icon_alignment = 1
expand_icon = true

[node name="ShapeButtons" type="ScrollContainer" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(420, 100)
offset_left = 100.0
offset_right = 520.0
offset_bottom = 170.0
size_flags_vertical = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons"]
offset_right = 988.0
offset_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SquareButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
offset_top = 43.0
offset_right = 75.0
offset_bottom = 118.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"SuccessButton"
script = ExtResource("8_hoo73")

[node name="SharpButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
offset_left = 83.0
offset_top = 43.0
offset_right = 158.0
offset_bottom = 118.0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 2

[node name="RoundButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
offset_left = 166.0
offset_top = 43.0
offset_right = 241.0
offset_bottom = 118.0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 3

[node name="ConcaveButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
offset_left = 249.0
offset_top = 43.0
offset_right = 324.0
offset_bottom = 118.0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 4

[node name="ConcaveSharpButton2" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
offset_left = 332.0
offset_top = 43.0
offset_right = 407.0
offset_bottom = 118.0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 5

[node name="SquareEdgeButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
offset_left = 415.0
offset_top = 43.0
offset_right = 490.0
offset_bottom = 118.0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 6

[node name="RoundEdgeButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
offset_left = 498.0
offset_top = 43.0
offset_right = 573.0
offset_bottom = 118.0
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 7

[node name="CircleButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
offset_left = 581.0
offset_top = 43.0
offset_right = 656.0
offset_bottom = 118.0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 8

[node name="FlowerButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
offset_left = 664.0
offset_top = 43.0
offset_right = 739.0
offset_bottom = 118.0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 9

[node name="HeartButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
offset_left = 747.0
offset_top = 43.0
offset_right = 822.0
offset_bottom = 118.0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 10

[node name="StarButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
offset_left = 830.0
offset_top = 43.0
offset_right = 905.0
offset_bottom = 118.0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 11

[node name="StarButton2" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/ShapeButtons/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
offset_left = 913.0
offset_top = 43.0
offset_right = 988.0
offset_bottom = 118.0
size_flags_vertical = 4
script = ExtResource("8_hoo73")
shape = 12

[node name="RightDrawTools" type="VBoxContainer" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer"]
offset_left = 530.0
offset_right = 620.0
offset_bottom = 170.0
theme_override_constants/separation = 10
alignment = 1

[node name="RotateRightButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/RightDrawTools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 80)
offset_right = 90.0
offset_bottom = 80.0
text = "
"
icon = ExtResource("11_11syx")
icon_alignment = 1
expand_icon = true

[node name="IncreaseSizeButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/RightDrawTools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
offset_top = 90.0
offset_right = 90.0
offset_bottom = 170.0
icon = ExtResource("19_crq7g")
icon_alignment = 1
expand_icon = true

[node name="Node" type="Node" parent="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton"]

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasTools/VBoxContainer/HBoxContainer2"]
offset_left = 124.0
offset_right = 780.0
offset_bottom = 140.0
size_flags_horizontal = 3

[node name="PaletteButton" parent="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer" instance=ExtResource("12_4owpo")]
custom_minimum_size = Vector2(100, 100)
offset_top = 20.0
offset_right = 100.0
offset_bottom = 120.0

[node name="MarginContainer2" type="MarginContainer" parent="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer"]
offset_left = 124.0
offset_right = 214.0
offset_bottom = 140.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_left = -150
theme_override_constants/margin_top = -130
theme_override_constants/margin_right = -60
theme_override_constants/margin_bottom = -30

[node name="DrawToolsWindow" type="Container" parent="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 300)
offset_left = -150.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = 170.0
size_flags_horizontal = 0
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("15_rflyk")
unsorted = [NodePath("CircleMenuButton"), NodePath("CircleMenuBackdrop"), NodePath("CircleCloseButton")]
degree_range = 180.0
degree_offset = 95.0
origin = 4
menu_open_icon = ExtResource("15_bphgi")
menu_close_icon = ExtResource("16_sdttm")
menu_button_min_size = Vector2(100, 100)
close_button_min_size = Vector2(45, 45)
menu_stylebox_override = SubResource("StyleBoxFlat_6hkiu")
override_degree_offset = 95.0

[node name="DrawButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
offset_left = 110.0
offset_top = 110.0
offset_right = 190.0
offset_bottom = 190.0
pivot_offset = Vector2(40, 40.0001)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"SuccessButton"
icon = ExtResource("15_bphgi")
icon_alignment = 1
expand_icon = true

[node name="EraseButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
offset_left = 110.0
offset_top = 110.0
offset_right = 190.0
offset_bottom = 190.0
pivot_offset = Vector2(40, 40)
size_flags_horizontal = 4
size_flags_vertical = 0
icon = ExtResource("14_umeww")
icon_alignment = 1
expand_icon = true

[node name="LineButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
offset_left = 110.0
offset_top = 110.0
offset_right = 190.0
offset_bottom = 190.0
pivot_offset = Vector2(40, 40)
size_flags_horizontal = 4
size_flags_vertical = 0
icon = ExtResource("13_monbh")
icon_alignment = 1
expand_icon = true

[node name="RectangleButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 80)
offset_left = 110.0
offset_top = 110.0
offset_right = 190.0
offset_bottom = 190.0
pivot_offset = Vector2(40, 40.0001)
size_flags_horizontal = 4
size_flags_vertical = 0
icon = ExtResource("12_geruk")
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasTools/VBoxContainer"]
custom_minimum_size = Vector2(0, 610)
offset_top = 282.0
offset_right = 780.0
offset_bottom = 1552.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="DrawTools" type="MarginContainer" parent="CanvasTools/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 400)
offset_top = 435.0
offset_right = 378.0
offset_bottom = 835.0
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="DropShadowContainer" type="MarginContainer" parent="CanvasTools/VBoxContainer/HBoxContainer/DrawTools"]
offset_right = 378.0
offset_bottom = 400.0
mouse_filter = 2
theme_override_constants/margin_left = -600
theme_override_constants/margin_top = -100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = -100

[node name="DropShadow" type="TextureRect" parent="CanvasTools/VBoxContainer/HBoxContainer/DrawTools/DropShadowContainer"]
self_modulate = Color(1, 1, 1, 0.784314)
offset_left = -600.0
offset_top = -100.0
offset_right = 328.0
offset_bottom = 500.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_fvk5r")
ignore_texture_size = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasTools/VBoxContainer/HBoxContainer/DrawTools"]
offset_right = 80.0
offset_bottom = 400.0
size_flags_horizontal = 0
mouse_filter = 2

[node name="ZoomInButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer/DrawTools/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
offset_right = 80.0
offset_bottom = 80.0
pivot_offset = Vector2(41.0001, 41.0002)
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("24_4mq7p")
expand_icon = true

[node name="ZoomOutButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer/DrawTools/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
offset_top = 104.0
offset_right = 80.0
offset_bottom = 184.0
pivot_offset = Vector2(41, 41)
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("25_4dkvo")
expand_icon = true

[node name="OkButtonContainer" type="MarginContainer" parent="CanvasTools/VBoxContainer/HBoxContainer"]
offset_left = 402.0
offset_right = 780.0
offset_bottom = 1270.0
size_flags_horizontal = 3
mouse_filter = 2

[node name="OkButton" type="Button" parent="CanvasTools/VBoxContainer/HBoxContainer/OkButtonContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(120, 75)
offset_left = 234.0
offset_top = 1171.0
offset_right = 354.0
offset_bottom = 1246.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = &"SuccessButton"
text = "Ok "
icon = ExtResource("16_m0h7j")
expand_icon = true

[node name="Gallery" parent="." instance=ExtResource("25_1hssg")]
unique_name_in_owner = true
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_layout_mode = 1

[node name="IosGuide" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource("27_frdcy")
ignore_texture_size = true
stretch_mode = 5

[connection signal="updated" from="Undo" to="." method="_on_undo_updated"]
[connection signal="action_completed" from="Canvas" to="." method="_on_canvas_action_completed"]
[connection signal="resume_draw" from="Canvas" to="." method="_on_canvas_resume_draw"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/MetaToolsContainer/UndoButtons/HBoxContainer/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/MetaToolsContainer/UndoButtons/HBoxContainer/RedoButton" to="." method="_on_redo_button_pressed"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/MetaToolsContainer/GalleryButtons/HBoxContainer/GalleryButton" to="." method="_on_gallery_button_pressed"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/MetaToolsContainer/GalleryButtons/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/ShapesCloseButton" to="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton" method="close"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/LeftDrawTools/RotateLeftButton" to="." method="_on_rotate_button_pressed" binds= [-90]]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/LeftDrawTools/DecreaseSizeButton" to="." method="_on_decrease_size_button_pressed"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/RightDrawTools/RotateRightButton" to="." method="_on_rotate_button_pressed" binds= [90]]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer2/PanelButton/MarginContainer/VBoxContainer/HBoxContainer/RightDrawTools/IncreaseSizeButton" to="." method="_on_increase_size_button_pressed"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow/DrawButton" to="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow" method="queue_close"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow/EraseButton" to="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow" method="queue_close"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow/LineButton" to="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow" method="queue_close"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow/RectangleButton" to="CanvasTools/VBoxContainer/HBoxContainer2/HFlowContainer/MarginContainer2/DrawToolsWindow" method="queue_close"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer/DrawTools/VBoxContainer/ZoomInButton" to="." method="_on_zoom_in_button_pressed"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer/DrawTools/VBoxContainer/ZoomOutButton" to="." method="_on_zoom_out_button_pressed"]
[connection signal="pressed" from="CanvasTools/VBoxContainer/HBoxContainer/OkButtonContainer/OkButton" to="." method="_on_ok_button_pressed"]
